# poetry-issue1689

dependency1/: pyproject.toml
dependency2/: pyproject.toml
my_package/: pyproject.toml
